--- a/InterviewApp/app/src/main/res/layout/fragment_question.xml
+++ b/InterviewApp/app/src/main/res/layout/fragment_question.xml
@@ -12,15 +12,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!--1.title-->
-        <com.xiaosu.interviewapp.ui.customview.TitleView
-            android:id="@+id/titleView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:isBack="false"
-            app:titleText="@string/menu_navigation_customize" />
-
         <com.xiaosu.interviewapp.ui.customview.WaveBackgroundView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,10 +22,19 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="20dp"
                 android:orientation="vertical">
+
+<!--                &lt;!&ndash;1.title&ndash;&gt;-->
+<!--                <com.xiaosu.interviewapp.ui.customview.TitleView-->
+<!--                    android:id="@+id/titleView"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:isBack="false"-->
+<!--                    app:titleText="@string/menu_navigation_customize" />-->
+
                 <!--2.我的题目&我的推广-->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <!--我的题目-->
                     <TextView
@@ -43,10 +43,9 @@
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
                         android:layout_weight="1"
-                        android:background="@color/white"
-                        android:drawableTop="@mipmap/ic_tip_back"
+                        android:drawableTop="@mipmap/ic_ship"
                         android:gravity="center"
-                        android:text="我的题目" />
+                        android:text="我的问题" />
 
                     <!--我的推广-->
                     <TextView
@@ -55,8 +54,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
                         android:layout_weight="1"
-                        android:background="@color/white"
-                        android:drawableTop="@mipmap/ic_tip_back"
+                        android:drawableTop="@mipmap/ic_ship_2"
                         android:gravity="center"
                         android:text="我的推广" />
 
@@ -91,12 +89,18 @@
             android:textColor="@color/black"
             android:textSize="20dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray"/>
+
         <!--收藏夹列表-->
         <ListView
             android:id="@+id/lv_collections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
+
     </LinearLayout>
 
 
