--- a/InterviewApp/app/src/main/res/layout/activity_my_question.xml
+++ b/InterviewApp/app/src/main/res/layout/activity_my_question.xml
@@ -11,8 +11,8 @@
         android:id="@+id/ll_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="#FFFFFF"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -35,11 +35,38 @@
         android:background="@color/colorPrimaryDark"
         app:layout_constraintTop_toBottomOf="@id/ll_title" />
 
+    <EditText
+        android:id="@+id/et_searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/selector_search"
+        android:drawableStart="@mipmap/ic_search_gray_48"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:hint="搜索"
+        android:imeOptions="actionSearch"
+        android:maxLines="1"
+        android:inputType="text"
+        android:padding="5dp"
+        android:textSize="13sp"
+        app:layout_constraintTop_toBottomOf="@id/view"/>
+
+    <TextView
+        android:id="@+id/tv_notFound"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        app:layout_constraintTop_toBottomOf="@id/et_searchView"
+        android:gravity="center"/>
+
     <ListView
         android:id="@+id/lv_mq"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="10dp"
+        android:layout_height="0dp"
         android:divider="#F0F0F0"
-        app:layout_constraintTop_toBottomOf="@id/view" />
+        android:layout_marginTop="5dp"
+        android:dividerHeight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_searchView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
