--- a/InterviewApp/app/src/main/res/layout/activity_question_selected.xml
+++ b/InterviewApp/app/src/main/res/layout/activity_question_selected.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.question.myquestion.MqItemActivity">
+    android:background="@color/gray"
+    tools:context=".ui.activity.question.practice.QuestionSelectedActivity">
 
     <com.xiaosu.interviewapp.ui.customview.TitleView
         android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         app:isBack="true"
+        android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleText="详情" />
+        app:titleText="选题" />
+
+    <ListView
+        android:id="@+id/listView_questionSelected"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@null"
+        app:layout_constraintTop_toBottomOf="@id/titleView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
