--- a/InterviewApp/app/src/main/res/layout/dialog_question_create_collection.xml
+++ b/InterviewApp/app/src/main/res/layout/dialog_question_create_collection.xml
@@ -23,6 +23,8 @@
         android:layout_margin="20dp"
         android:background="@drawable/shape_login_register_et"
         android:hint="请输入收藏夹名称"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/dialog_title" />
 
 
